@@ -29,7 +29,7 @@ from Components.NimManager import nimmanager
 from enigma import eComponentScan
 from Screens.ScanSetup import getInitialTransponderList
 
-ab_version = "08 Apr 2024"
+ab_version = "15 Apr 2024"
 defaultservice = "1:0:1:C482:811:2:11A0000:0:0:0:"  # "NOW 80s ;p"
 initscanservice = "1:0:2:1038:7D4:2:11A0000:0:0:0:"  # "EPG Background Audio."
 
@@ -140,6 +140,7 @@ config.autobouquets.ordering = ConfigYesNo(default=False)
 config.autobouquets.freetoair = ConfigSelection(default="2", choices=freetoair)
 config.autobouquets.checkscript = ConfigYesNo(default=True)
 config.autobouquets.style = ConfigSelection(default="0", choices=stylelist)
+config.autobouquets.iptvepg = ConfigYesNo(default=True)
 config.autobouquets.piconlink = ConfigSelection(default="1", choices=piconlink)
 config.autobouquets.piconfolder = ConfigSelection(default="3", choices=piconfolder)
 config.autobouquets.piconstyle = ConfigSelection(default="0", choices=piconstyle)
@@ -789,6 +790,8 @@ class AutoBouquetsMenu(ConfigListScreen, Screen):
 			_("Some images do not allow the scripts being used\nOnly disable this if you experience problems")))
 		self.list.append(getConfigListEntry(_("Bouquet Display Style"), config.autobouquets.style,
 			_("Choose your Bouquet Display Style")))
+		self.list.append(getConfigListEntry(_("Show Iptv EPG Converter"), config.autobouquets.iptvepg,
+			_("Attempts to auto convert live UK Iptv bouquets generated by BMX or JMX to use enigma2 opentv stream EPG service references generated from the AutoBouquets E2 for 28.2E plugin")))
 		self.list.append(getConfigListEntry(_("Create AutoPicon Links"), config.autobouquets.piconstyle,
 			_("Do you want AB 28.2 to maintain the links to picons?\nOrdinary = conventional picons")))
 		if config.autobouquets.piconstyle.value != '0':
@@ -1021,6 +1024,45 @@ class AutoBouquetsDownloader(Screen):
 		self.timer.callback.append(self.close(None))
 		self.timer.start(5000, 1)
 
+class AutoBouquetsIptvEPG(Screen):
+	skin = """
+		<screen position="40,30" size="260,70" title="AutoBouquets IptvEPG Converter" flags="wfNoBorder" >
+			<widget name="action" halign="center" valign="center" position="10,10" size="240,20" font="Regular;18" backgroundColor="#11000000" transparent="1" />
+			<widget name="status" halign="center" valign="center" position="10,35" size="240,25" font="Regular;18" backgroundColor="#11000000" transparent="1" />
+		</screen>"""
+
+	def __init__(self, session):
+		Screen.__init__(self, session)
+		self.session = session
+		self["action"] = Label(_("AutoBouquets Iptv EPG"))
+		self["status"] = Label(_("converting bouquets"))
+		self.doConvertIptvEPG()
+
+	def doConvertIptvEPG(self):
+		com = ("cd %s; /bin/busybox ash ./autobouquets_iptv_epg.sh " % (path.dirname(modules[__name__].__file__)))
+		self.shcomConvertIptvEPG(com)
+
+	def shcomConvertIptvEPG(self, com):
+		try:
+			global container
+
+			def appClosed(retval):
+				global container
+				print("[AutoBouquets Iptv EPG Converter] FINISHED: ", retval)
+				container = None
+				self.convertIptvEPGcomplete()
+			container = eConsoleAppContainer()
+			if container.execute(com):
+				raise Exception("Script Failed: " + com)
+			container.appClosed.append(appClosed)
+		except Exception as e:
+			print("[AutoBouquets Iptv EPG Converter] FAILED: ", e)
+
+	def convertIptvEPGcomplete(self):
+		eDVBDB.getInstance().reloadBouquets()
+		self.timer = eTimer()
+		self.timer.callback.append(self.close(None))
+		self.timer.start(5000, 1)
 
 def main(session, **kwargs):
 	session.open(AutoBouquets)
@@ -1037,9 +1079,23 @@ def mainscan(menuid, **kwargs):
 		return []
 
 
+def iptvepgconverter(session, **kwargs):
+	session.open(AutoBouquetsIptvEPG)
+
+
+def iptvepg(menuid, **kwargs):
+	if menuid in ("epg", "epg_menu",):
+		return [(_("AutoBouquets IptvEPG"), iptvepgconverter, _("convert Iptv to 28.2e stream EPG"), None)]
+	else:
+		return []
+
+
 def Plugins(**kwargs):
 	plist = [PluginDescriptor(name=_("AutoBouquets E2"), description=_("28.2e stream bouquet downloader"), where=PluginDescriptor.WHERE_PLUGINMENU, icon="autobouquets.png", fnc=main)]
 	plist.append(PluginDescriptor(name=_("AutoBouquets 28.2E Downloader"), description=_("28.2e stream bouquet downloader"), where=PluginDescriptor.WHERE_EXTENSIONSMENU, fnc=maindownloader))
 	plist.append(PluginDescriptor(where=PluginDescriptor.WHERE_SESSIONSTART, fnc=AutoBouquetsautostart))
 	plist.append(PluginDescriptor(where=PluginDescriptor.WHERE_MENU, fnc=mainscan))
+	if config.autobouquets.iptvepg.getValue() == True:
+		plist.append(PluginDescriptor(name=_("AutoBouquets IptvEPG Converter"), description=_("Iptv to 28.2e stream EPG converter"), where=PluginDescriptor.WHERE_EXTENSIONSMENU, fnc=iptvepgconverter, needsRestart=True))
+		plist.append(PluginDescriptor(where=PluginDescriptor.WHERE_MENU, fnc=iptvepg, needsRestart=True))
 	return plist
