@@ -407,3 +407,10 @@ Remove some closed ITV SD renames
 
 2024-04-08
 Remove some BBC SD swaps
+
+2024-04-15
+add optional AutoBouquets IptvEPG converter extension to menus.
+new script tool attempts to auto convert live UK Iptv bouquets
+generated by BMX or JMX to use opentv stream EPG service refs.
+user to update CHANNEL_ID_ALIAS in autobouquets_iptv_epg.sh as needed
+with required info taken from autobouquets.csv database reference file
